--- a/Contact.html
+++ b/Contact.html
@@ -12,10 +12,10 @@
             <h3 id="item1">Career Goals</h3>
             <ol id="item2">
                 <span>
-                    <button><a href="./PortfolioIndex.html">About Me</a></button>
+                    <button><a href="./ndex.html">About Me</a></button>
                 </span>
                 <span>
-                    <button><a href="./PortfolioIndex.html">Skills</a></button>
+                    <button><a href="./Index.html">Skills</a></button>
                 </span>
                 <span>
                     <button><a href="./Contact.html">Contanct</a></button>
