--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
             <h3 id="item1">Career Goals</h3>
             <ol id="item2">
                 <span>
-                    <button><a href="./ndex.html">About Me</a></button>
+                    <button><a href="./Index.html">About Me</a></button>
                 </span>
                 <span>
                     <button><a href="./Index.html">Skills</a></button>
